--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  color: rgba(29,161,242,1.00);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hashtagForm {
+  width: 100%;
+}
+
+.hashtagForm__label {
+  color: rgb(20, 23, 26);
+  font-weight: 800;
+  font-size: 19px;
+  display: block;
+}
+
+.hashtagForm__input {
+  border: none;
+  font-size: 19px;
+  color: rgb(20, 23, 26);
+  font-weight: 400;
+  line-height: 1.3125;
+  padding: 10px;
+  width: 320px;
+}
+
+.hashtagForm__button {
+  border: none;
+  background-color: rgb(29, 161, 242);
+  padding-left: 1em;
+  padding-right: 1em;
+  border-radius: 9999px;
+  color: rgb(255, 255, 255);
+  line-height: 1;
+  font-weight: bold;
+  font-size: 15px;
+  min-height: 39px;
+  cursor: pointer;
 }
