--- a/src/components/Hashtag/styles.css
+++ b/src/components/Hashtag/styles.css
@@ -1,3 +1,7 @@
 .hashtag {
   color: rgb(29,161,242);
+  border: 1px solid rgb(29,161,242);
+  padding: 10px;
+  border-radius: 9999px;
+  margin-right: 10px;
 }
