--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
 @media (max-width: 600px) {
   .hashtagForm__input {
     font-size: 16px;
+    width: 300px;
   }
 }
 
@@ -61,6 +62,11 @@
   font-size: 15px;
   min-height: 39px;
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.hashtagForm__button:hover {
+  background-color: rgb(10, 100, 242);
 }
 
 .hashtagList {
