--- a/src/components/Hashtag/styles.css
+++ b/src/components/Hashtag/styles.css
@@ -6,4 +6,10 @@
   margin-right: 10px;
   margin-bottom: 10px;
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.hashtag:hover {
+  color: rgb(242, 29, 100);
+  border: 1px solid rgb(242, 29, 100);
 }
