--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,6 @@
 
 .hashtagForm {
   margin-top: 30px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .hashtagForm__label {
@@ -31,7 +28,18 @@
   font-weight: 800;
   font-size: 19px;
   width: 100%;
-  margin-bottom: 20px;
+}
+
+.hashtagForm__input-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+@media (max-width: 500px) {
+  .hashtagForm__input-wrapper {
+    flex-direction: column;
+  }
 }
 
 .hashtagForm__input {
@@ -40,9 +48,15 @@
   color: rgb(20, 23, 26);
   font-weight: 400;
   line-height: 1.3125;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   width: 340px;
   margin-right: 20px;
+}
+
+@media (max-width: 500px) {
+  .hashtagForm__input {
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 600px) {
